--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-core>=1.0.7",
     "langchain-groq>=1.0.1",
+    "langchain-ollama>=1.0.1",
     "langchain-text-splitters>=1.0.0",
     "pymupdf>=1.26.6",
     "pypdf>=6.3.0",
